--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ body {
 .abertura {
   text-align:center;
   padding-top: 15px;
-  padding-bottom: 35px;
   color: aqua;
 }
 
@@ -50,6 +49,7 @@ p {
 }
 
 .btt {
+  padding-top: 15px;
   display: flex;
   justify-content: center;
   align-items: baseline;
